# downscoping-mcp

./: .gitignore  .mcp.json  README.md  config.example.yaml  pyproject.toml
.claude-plugin/: plugin.json
docs/: AWS_DOWNSCOPING.md  GCP_DOWNSCOPING.md  GITHUB_DOWNSCOPING.md  INTERVIEW_QUESTIONS.md  KUBECTL_DOWNSCOPING.md  SANDBOXING_LANDSCAPE.md
hooks/: pre_tool_use.py
src/credential_downscope/: __init__.py  config.py  hook_handler.py  mcp_proxy.py  rules.py
tests/: test_aws_downscoping.py  test_config.py  test_gcp_downscoping.py  test_github_downscoping.py  test_hook_handler.py  test_kubectl_downscoping.py  test_rules.py
